          loading time, especially with complex contact lists (clist_nicer, clist_modern and
          such).
          
        * updated for new smileyadd api (event for changed emoticon configuration). Changing
          smileyadd options will now instantly reconfigure smileyadd settings in all open message
          windows (button icon + smileys in the message window).

Version 0.9.9.97 - 2005/07/23

        ! extended status tooltip working with all (recent) ICQ.dll builds. 
        
        ! fixed clock symbol for some special situations.

        + new title format variable: %m -> meta status. Has nothing to do with metacontacts.
          How it works: If an extended status is set, it will be used. If not, the normal
          protocol status is shown. Also supports custom status mode names using the XStatusName
          db setting (supported by ICQJ and ISee).
          
        ! typo in the template parser (%m variable)
        
        * removed smiley selection window focus workaround. No longer necessary, because 
          fixed smileyadd doesn't mess up input focus any more.

        + new shortcut: Ctrl-K -> clear input area
        
        ! fixed %D and %E variables
        
        + updated for smileyadd 1.5.0 (by borkra). Beginning with this release, tabSRMM does
          no longer require its own smileyadd plugin and therefore this plugin has been removed
          from the archive.
          
          I suggest to update to the most recent smileyadd, available from:
          
          http://www.miranda-im.org/download/details.php?action=viewfile&id=2152
          
          It is strongly recommended to use this version, because it fixes a lot of issues and
          has some internal improvements. It is fully compatible with all SRMM-based message
          windows and therefore works with SRMM, tabSRMM, scriver and others.
          
Version 0.9.9.96 - 2005/07/18
